fix otel collector mode

--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -3,7 +3,7 @@ kind: OpenTelemetryCollector
 metadata:
   name: otel-collector-daemonset
 spec:
-  mode: DaemonSet
+  mode: daemonset
   config: |
     receivers:
       jaeger:
