fix prometheus crd name too long issue with argocd sync

--- a/env/cluster-addons/prometheus/kustomization.yaml
+++ b/env/cluster-addons/prometheus/kustomization.yaml
@@ -8,3 +8,6 @@ helmCharts:
     valuesFile: values.yaml
     includeCRDs: true
     namespace: prometheus
+
+patchesStrategicMerge:
+  - "./overlays/crd-prometheuses.monitoring.coreos.com.yaml"
