--- a/env/cluster-addons/cert-manager/kustomization.yaml
+++ b/env/cluster-addons/cert-manager/kustomization.yaml
@@ -10,7 +10,7 @@ helmCharts:
     version: 1.7.1
     releaseName: cert-manager
     valuesFile: values.yaml
-    includeCRDs: false
+    includeCRDs: true
     namespace: cert-manager
 
   - name: cert-manager-trust
