--- a/env/cluster-addons/keda/kustomization.yaml
+++ b/env/cluster-addons/keda/kustomization.yaml
@@ -6,5 +6,5 @@ helmCharts:
     version: 2.6.2
     releaseName: keda
     valuesFile: values.yaml
-    includeCRDs: false
+    includeCRDs: true
     namespace: keda
