1. move prometehus cluster addon to prometheus-operator namespace 2. add grafana to devops cluster

--- a/env/cluster-addons/prometheus-operator/values.yaml
+++ b/env/cluster-addons/prometheus-operator/values.yaml
@@ -1,7 +1,13 @@
+# Manage only PROMETHEUS resources on cluster-addon 
+# and disable Grafana as part of this cluster addon 
+# as grafana to be deployed in DevOps cluster as centralized service
 alertmanager:
   enabled: false
 
 grafana:
+  enabled: false
+
+nodeExporter:
   enabled: false
 
 prometheus:
