--- a/env/cluster-addons/prometheus-operator/kustomization.yaml
+++ b/env/cluster-addons/prometheus-operator/kustomization.yaml
@@ -1,13 +1,16 @@
+# Manage only PROMETHEUS resources on cluster-addon 
+# and disable Grafana as part of this cluster addon 
+# as grafana to be deployed in DevOps cluster as centralized service
 kind: Kustomization
 
 helmCharts:
   - name: kube-prometheus-stack
     repo: https://prometheus-community.github.io/helm-charts
     version: 33.1.0
-    releaseName: prometheus
+    releaseName: prometheus-operator
     valuesFile: values.yaml
     includeCRDs: true
-    namespace: prometheus
+    namespace: prometheus-operator
 
 patchesStrategicMerge:
   - "./overlays/crd-prometheuses.monitoring.coreos.com.yaml"
