--- a/env/cluster-addons/prometheus-operator/kustomization.yaml
+++ b/env/cluster-addons/prometheus-operator/kustomization.yaml
@@ -13,4 +13,5 @@ helmCharts:
     namespace: prometheus-operator
 
 patchesStrategicMerge:
+  # to force argocd to replace(create/recreate) instead appling this crd as a workaround for it's name too long issue
   - "./overlays/crd-prometheuses.monitoring.coreos.com.yaml"
