--- a/env/devops/tools/prometheus-operator/kustomization.yaml
+++ b/env/devops/tools/prometheus-operator/kustomization.yaml
@@ -11,3 +11,7 @@ helmCharts:
     valuesFile: values.yaml
     includeCRDs: true
     namespace: prometheus-operator
+
+patchesStrategicMerge:
+  # to force argocd to replace(create/recreate) instead appling this crd as a workaround for it's name too long issue
+  - "./overlays/crd-prometheuses.monitoring.coreos.com.yaml"
