force deploy datasource for prom

--- a/env/cluster-addons/prometheus-operator/values.yaml
+++ b/env/cluster-addons/prometheus-operator/values.yaml
@@ -7,6 +7,10 @@ alertmanager:
 grafana:
   enabled: false
 
+  ## ForceDeployDatasources Create datasource configmap even if grafana deployment has been disabled
+  ##
+  forceDeployDatasources: true
+
 nodeExporter:
   enabled: false
 
