--- a/env/cluster-addons/argo-rollouts/kustomization.yaml
+++ b/env/cluster-addons/argo-rollouts/kustomization.yaml
@@ -1,10 +1,10 @@
 kind: Kustomization
 
 helmCharts:
-  - name: argo-rollouts
-    repo: https://argoproj.github.io/argo-helm
+  - repo: https://argoproj.github.io/argo-helm
+    name: argo-rollouts
     version: 2.10.0
-    releaseName: argo-rollouts
-    valuesFile: values.yaml
     includeCRDs: true
     namespace: argo-rollouts
+    releaseName: argo-rollouts
+    valuesFile: values.yaml
