--- a/env/cluster-addons/external-secrets-operator/kustomization.yaml
+++ b/env/cluster-addons/external-secrets-operator/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
   - "./resources/cluster-secret-store.yaml"
 
 helmCharts:
-  - name: external-secrets
-    repo: https://charts.external-secrets.io
+  - repo: https://charts.external-secrets.io
+    name: external-secrets
     version: 0.4.3
     releaseName: external-secrets
     valuesFile: values.yaml
