enable pv for loki and tempo

--- a/env/cluster-addons/loki/values.yaml
+++ b/env/cluster-addons/loki/values.yaml
@@ -24,6 +24,10 @@ gateway:
             # Newly added optional property
             pathType: Prefix
 
+ingester:
+  persistence: true
+  size: 2Gi
+  
 # ServiceMonitor configuration
 serviceMonitor:
   # -- If enabled, ServiceMonitor resources for Prometheus Operator are created
