--- a/env/cluster-addons/loki/values.yaml
+++ b/env/cluster-addons/loki/values.yaml
@@ -7,7 +7,7 @@ global:
   # # -- configures cluster domain ("cluster.local" by default)
   # clusterDomain: "cluster.local"
   # # -- configures DNS service name
-  dnsService: "core-dns"
+  dnsService: "coredns"
   # -- configures DNS service namespace
   # dnsNamespace: "kube-system"
 
@@ -27,7 +27,7 @@ gateway:
 ingester:
   persistence: true
   size: 2Gi
-  
+
 # ServiceMonitor configuration
 serviceMonitor:
   # -- If enabled, ServiceMonitor resources for Prometheus Operator are created
