--- a/env/cluster-addons/tempo/values.yaml
+++ b/env/cluster-addons/tempo/values.yaml
@@ -7,7 +7,7 @@ global:
   # # -- configures cluster domain ("cluster.local" by default)
   # clusterDomain: "cluster.local"
   # # -- configures DNS service name
-  dnsService: "core-dns"
+  dnsService: "coredns"
   # -- configures DNS service namespace
   # dnsNamespace: "kube-system"
 
