disabling pv for loki and tempo

--- a/env/cluster-addons/loki/values.yaml
+++ b/env/cluster-addons/loki/values.yaml
@@ -24,10 +24,10 @@ gateway:
             # Newly added optional property
             pathType: Prefix
 
-ingester:
-  persistence: true
-  size: 2Gi
-  storageClass: 
+# ingester:
+#   persistence: true
+#   size: 2Gi
+#   storageClass: 
 
 # ServiceMonitor configuration
 serviceMonitor:
