set access to proxy for loki and tempo datasources

--- a/env/devops/tools/prometheus-operator/values.yaml
+++ b/env/devops/tools/prometheus-operator/values.yaml
@@ -99,10 +99,12 @@ grafana:
     additionalDataSources:
       - name: loki
         type: loki
+        access: proxy
         url: http://loki-loki-distributed-gateway.loki
 
       - name: tempo
         type: tempo
+        access: proxy
         url: http://tempo-tempo-distributed-query-frontend.tempo:3100
 
 kubeApiServer:
