--- a/env/devops/tools/prometheus-operator/kustomization.yaml
+++ b/env/devops/tools/prometheus-operator/kustomization.yaml
@@ -12,6 +12,9 @@ helmCharts:
     releaseName: grafana
     valuesFile: values.yaml
 
+resources:
+  - "./resources/loki-datasource-cm.yaml"
+  
 patchesStrategicMerge:
   # to force argocd to replace(create/recreate) instead appling this crd as a workaround for it's name too long issue
   - "./overlays/crd-prometheuses.monitoring.coreos.com.yaml"
