--- a/env/devops/tools/argocd/kustomization.yaml
+++ b/env/devops/tools/argocd/kustomization.yaml
@@ -2,7 +2,10 @@ kind: Kustomization
 namespace: argocd
 
 resources:
-  - "./resources/argocd-install.yaml"
+  - "./resources/crds/application-crd.yaml"
+  - "./resources/crds/appproject-crd.yaml"
+  # - "./resources/argocd-install.yaml"
+  - "./resources/namespace-install.yaml"
   - "./resources/ingress.yaml"
 
 patches:
