test prom config

--- a/env/devops/tools/prometheus-operator/values.yaml
+++ b/env/devops/tools/prometheus-operator/values.yaml
@@ -97,13 +97,13 @@ grafana:
       labelValue: "1"
 
 kubeApiServer:
-  enabled: false
+  enabled: true
 
 kubelet:
   enabled: false
 
 kubeControllerManager:
-  enabled: false
+  enabled: true
 
 coreDns:
   enabled: false
