--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -17,10 +17,13 @@ spec:
 
     exporters:
       logging:
+        loglevel: debug
+      otlp:
+        endpoint: http://tempo-tempo-distributed-query-frontend.tempo:3100
 
     service:
       pipelines:
         traces:
           receivers: [otlp, jaeger]
           processors: []
-          exporters: [logging]
+          exporters: [logging, otlp]
