--- a/env/cluster-addons/opentelemetry-operator/kustomization.yaml
+++ b/env/cluster-addons/opentelemetry-operator/kustomization.yaml
@@ -2,6 +2,7 @@ kind: Kustomization
 
 resources:
   - "./resources/opentelemetry-collector.yaml"
+  - "./resources/auto-instrumentation.yaml"
 
 helmCharts:
   - repo: https://open-telemetry.github.io/opentelemetry-helm-charts
