move auto-instrumentation to test namespace

--- a/env/test/jaeger-create-span-app/auto-instrumentation.yaml
+++ b/env/test/jaeger-create-span-app/auto-instrumentation.yaml
@@ -2,6 +2,7 @@ apiVersion: opentelemetry.io/v1alpha1
 kind: Instrumentation
 metadata:
   name: auto-instrumentation
+  namespace: test
 spec:
   exporter:
     endpoint: http://otel-collector:4317
