--- a/env/test/jaeger-create-span-app/ingress.yaml
+++ b/env/test/jaeger-create-span-app/ingress.yaml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: myingress
+  name: my-ingress
   namespace: test
   labels:
-    name: myingress
+    name: my-ingress
 spec:
   rules:
   - host: mk.jaeger-test-app.local
@@ -14,6 +14,6 @@ spec:
         path: "/"
         backend:
           service:
-            name: myapp
+            name: my-app
             port: 
-              number: 8080
+              name: http
