--- a/env/test/jaeger-create-span-app/service.yaml
+++ b/env/test/jaeger-create-span-app/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp
+  name: my-app
   namespace: test
 spec:
   selector:
-    app: myapp
+    app: m-app
   ports:
   - name: http
     port: 8080
