--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -6,6 +6,17 @@ spec:
   mode: daemonset
   config: |
     receivers:
+      prometheus:
+        config:
+          scrape_configs:
+          - job_name: 'otelcol'
+            scrape_interval: 10s
+            static_configs:
+            - targets: ['0.0.0.0:8888']
+            metric_relabel_configs:
+              - source_labels: [ __name__ ]
+                regex: '.*grpc_io.*'
+                action: drop
       jaeger:
         protocols:
           grpc:
@@ -24,6 +35,6 @@ spec:
     service:
       pipelines:
         traces:
-          receivers: [otlp, jaeger]
+          receivers: [prometheus, otlp, jaeger]
           processors: []
           exporters: [logging, otlp]
