move prom metrics services

--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -38,3 +38,7 @@ spec:
           receivers: [prometheus, otlp, jaeger]
           processors: []
           exporters: [logging, otlp]
+        metrics:
+          receivers: [prometheus]
+          processors: []
+          exporters: [logging]
