--- a/env/cluster-addons/tempo/values.yaml
+++ b/env/cluster-addons/tempo/values.yaml
@@ -42,3 +42,17 @@ prometheusRule:
         expr: sum(rate(tempo_request_duration_seconds_bucket[1m])) by (le, job, route)
       - record: node_namespace_pod_container:container_cpu_usage_seconds_total:sum_rate
         expr: sum(rate(container_cpu_usage_seconds_total[1m])) by (node, namespace, pod, container)
+
+ingress:
+    enabled: true
+    ingressClassName: nginx
+    annotations: {}
+    hosts:
+      - host: mk.tempo.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls:
+      # - secretName: tempo-gateway-tls
+      - hosts:
+        - mk.tempo.local
