fix tempo url in opentelemetry exporter

--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -31,7 +31,9 @@ spec:
       logging:
         loglevel: debug
       otlp:
-        endpoint: tempo-tempo-distributed-gateway.tempo
+        endpoint: mk.tempo.192.168.64.25.nip.io:443
+        tls:
+          insecure_skip_verify: true
 
     service:
       pipelines:
