--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -63,4 +63,7 @@ spec:
           receivers: [prometheus]
           processors: []
           exporters: [logging]
-        lo
+        logs:
+          receivers: [otlp]
+          processors: []
+          exporters: [logging, loki]        
