--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -4,6 +4,7 @@ metadata:
   name: otel-collector-daemonset
 spec:
   mode: daemonset
+  image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector:latest
   config: |
     receivers:
       jaeger:
