--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -4,7 +4,7 @@ metadata:
   name: otel-collector-daemonset
 spec:
   mode: daemonset
-  image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector:0.46.0
+  image: otel/opentelemetry-collector-contrib:latest
   config: |
     receivers:
       jaeger:
@@ -53,6 +53,8 @@ spec:
           record:
             # Adds 'traceID' as a log label, seen as 'traceid' in Loki.
             traceID: "traceid"
+    extensions:
+      health_check:
 
     service:
       pipelines:
@@ -67,4 +69,5 @@ spec:
         logs:
           receivers: [otlp]
           processors: []
-          exporters: [logging, loki]        
+          exporters: [logging, loki]
+        extensions: [health_check]
