update jaeger tracing protocol to grpc

--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -9,7 +9,7 @@ spec:
     receivers:
       jaeger:
         protocols:
-          thrift_compact:
+          grpc:
       otlp:
         protocols:
           grpc:
