use grpc otel collector endpoint in autoinstrumentation

--- a/env/test/jaeger-create-span-app/auto-instrumentation.yaml
+++ b/env/test/jaeger-create-span-app/auto-instrumentation.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: test
 spec:
   exporter:
-    endpoint: http://otel-collector-daemonset-collector.opentelemetry-operator:4318
+    endpoint: otel-collector-daemonset-collector.opentelemetry-operator:4317
   propagators:
     - tracecontext
     - baggage
