--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -31,7 +31,7 @@ spec:
 
     exporters:
       logging:
-      tempo:
+      otlp:
         endpoint: mk.tempo.192.168.64.26.nip.io:443
         tls:
           insecure_skip_verify: true
@@ -59,7 +59,7 @@ spec:
         traces:
           receivers: [otlp, jaeger]
           processors: [batch]
-          exporters: [logging, tempo]
+          exporters: [logging, otlp]
         metrics:
           receivers: [prometheus]
           processors: [batch]
