--- a/env/cluster-addons/tempo/values.yaml
+++ b/env/cluster-addons/tempo/values.yaml
@@ -7,7 +7,9 @@ gateway:
   ingress:
     enabled: true
     ingressClassName: nginx
-    annotations: {}
+    annotations:
+      nginx.ingress.kubernetes.io/ssl-passthrough: true
+      
     hosts:
       - host: mk.tempo.local
         paths:
