--- a/env/cluster-addons/tempo/values.yaml
+++ b/env/cluster-addons/tempo/values.yaml
@@ -14,6 +14,7 @@ gateway:
       - host: mk.tempo.192.168.64.26.nip.io
         paths:
           - path: /
+            pathType: Prefix
     tls:
       # - secretName: tempo-gateway-tls
       - hosts:
