set implementationspecific pathtype for temp ingress

--- a/env/cluster-addons/tempo/values.yaml
+++ b/env/cluster-addons/tempo/values.yaml
@@ -14,7 +14,7 @@ gateway:
       - host: mk.tempo.192.168.64.26.nip.io
         paths:
           - path: /
-            pathType: Prefix
+            pathType: ImplementationSpecific
     tls:
       # - secretName: tempo-gateway-tls
       - hosts:
