use tempo ingestor

--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -32,7 +32,7 @@ spec:
     exporters:
       logging:
       otlp:
-        endpoint: tempo-tempo-distributed-distributor.tempo:9095
+        endpoint: http://tempo-tempo-distributed-ingester.tempo.svc.cluster.local:3100
         tls:
           insecure_skip_verify: true
           insecure: true
