try flush url of tempo

--- a/env/cluster-addons/tempo/values.yaml
+++ b/env/cluster-addons/tempo/values.yaml
@@ -7,8 +7,8 @@ gateway:
   ingress:
     enabled: true
     ingressClassName: nginx
-    annotations:
-      nginx.ingress.kubernetes.io/ssl-passthrough: true
+    # annotations:
+    #   nginx.ingress.kubernetes.io/ssl-passthrough: true
 
     hosts:
       - host: mk.tempo.192.168.64.26.nip.io
