--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -32,7 +32,7 @@ spec:
     exporters:
       logging:
       otlp:
-        endpoint: mk.tempo.192.168.64.26.nip.io/flush
+        endpoint: https://mk.tempo.192.168.64.26.nip.io:443/flush
         tls:
           insecure_skip_verify: true
           insecure: true
