--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -32,9 +32,9 @@ spec:
     exporters:
       logging:
       otlp:
-        endpoint: https://mk.tempo.192.168.64.26.nip.io:443/flush
+        endpoint: http://tempo-tempo-distributed-distributor.tempo.svc.cluster.local:55681
         tls:
-          insecure_skip_verify: true
+          # insecure_skip_verify: true
           insecure: true
       loki:
         endpoint: http://loki-loki-distributed-gateway.loki/loki/api/v1/push
