--- a/env/devops/tools/argocd/resources/argocd-install.yaml
+++ b/env/devops/tools/argocd/resources/argocd-install.yaml
@@ -1,4 +1,5 @@
 # This is an auto-generated file. DO NOT EDIT
+# https://github.com/argoproj/argo-cd/blob/v2.3.1/manifests/install.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -9556,6 +9557,7 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
+  namespace: argocd
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -9805,7 +9807,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: quay.io/argoproj/argocd-applicationset:v0.4.0
+        image: quay.io/argoproj/argocd-applicationset:v0.4.1
         imagePullPolicy: Always
         name: argocd-applicationset-controller
         ports:
@@ -9886,7 +9888,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /shared/argocd-dex
-        image: quay.io/argoproj/argocd:v2.3.0
+        image: quay.io/argoproj/argocd:v2.3.1
         imagePullPolicy: Always
         name: copyutil
         volumeMounts:
@@ -9919,7 +9921,7 @@ spec:
       containers:
       - command:
         - argocd-notifications
-        image: quay.io/argoproj/argocd:v2.3.0
+        image: quay.io/argoproj/argocd:v2.3.1
         imagePullPolicy: Always
         livenessProbe:
           tcpSocket:
@@ -10116,7 +10118,7 @@ spec:
           value: /helm-working-dir
         - name: HELM_DATA_HOME
           value: /helm-working-dir
-        image: quay.io/argoproj/argocd:v2.3.0
+        image: quay.io/argoproj/argocd:v2.3.1
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
@@ -10165,7 +10167,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: quay.io/argoproj/argocd:v2.3.0
+        image: quay.io/argoproj/argocd:v2.3.1
         name: copyutil
         volumeMounts:
         - mountPath: /var/run/argocd
@@ -10388,7 +10390,7 @@ spec:
               key: server.http.cookie.maxnumber
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.3.0
+        image: quay.io/argoproj/argocd:v2.3.1
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -10578,7 +10580,7 @@ spec:
               key: controller.default.cache.expiration
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.3.0
+        image: quay.io/argoproj/argocd:v2.3.1
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
