--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -31,14 +31,14 @@ spec:
 
     exporters:
       logging:
-        logLevel: debug
+        # logLevel: debug
 
       otlp/tempo:
         endpoint: https://mk.tempo.192.168.64.26.nip.io:443
         tls:
           insecure_skip_verify: true
           # insecure: true
-          
+
       loki:
         endpoint: http://loki-loki-distributed-gateway.loki/loki/api/v1/push
         # tenant_id: "example"
