--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -34,7 +34,7 @@ spec:
         # logLevel: debug
 
       otlp/tempo:
-        endpoint: tempo-tempo-distributed-gateway:80
+        endpoint: tempo-tempo-distributed-gateway.tempo:80
         tls:
           insecure_skip_verify: true
           # insecure: true
