enable traces in tempo

--- a/env/cluster-addons/tempo/values.yaml
+++ b/env/cluster-addons/tempo/values.yaml
@@ -20,6 +20,29 @@ gateway:
       - hosts:
         - mk.tempo.192.168.64.26.nip.io
 
+traces:
+  jaeger:
+    # -- Enable Tempo to ingest Jaeger GRPC traces
+    grpc: true
+    # -- Enable Tempo to ingest Jaeger Thrift Binary traces
+    thriftBinary: true
+    # -- Enable Tempo to ingest Jaeger Thrift Compact traces
+    thriftCompact: true
+    # -- Enable Tempo to ingest Jaeger Thrift HTTP traces
+    thriftHttp: true
+  # -- Enable Tempo to ingest Zipkin traces
+  zipkin: false
+  otlp:
+    # -- Enable Tempo to ingest Open Telemetry HTTP traces
+    http: true
+    # -- Enable Tempo to ingest Open Telemetry GRPC traces
+    grpc: true
+  # -- Enable Tempo to ingest Open Census traces
+  opencensus: false
+  # -- Enable Tempo to ingest traces from Kafka. Reference: https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/kafkareceiver
+  kafka: {}
+
+
 # ingester:
 #   persistence: true
 #   size: 2Gi
