--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -34,10 +34,10 @@ spec:
         # logLevel: debug
 
       otlp/tempo:
-        endpoint: tempo-tempo-distributed-gateway.tempo:80
+        endpoint: mk.tempo.192.168.64.26.nip.io:443
         tls:
-          # insecure_skip_verify: true
-          insecure: true
+          insecure_skip_verify: true
+          # insecure: true
 
       loki:
         endpoint: http://loki-loki-distributed-gateway.loki/loki/api/v1/push
