--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -34,7 +34,7 @@ spec:
         # logLevel: debug
 
       otlp/tempo:
-        endpoint: mk.tempo.192.168.64.26.nip.io:443/otlp
+        endpoint: https://mk.tempo.192.168.64.26.nip.io:443/otlp
         tls:
           insecure_skip_verify: true
           # insecure: true
