--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -33,8 +33,8 @@ spec:
       logging:
         # logLevel: debug
 
-      otlphttp/tempo:
-        endpoint: https://mk.tempo.192.168.64.26.nip.io:443/otlp
+      otlp/tempo:
+        endpoint: mk.tempo.192.168.64.26.nip.io:443
         tls:
           insecure_skip_verify: true
           # insecure: true
@@ -63,7 +63,7 @@ spec:
         traces:
           receivers: [otlp, jaeger]
           processors: [batch]
-          exporters: [logging, otlphttp/tempo]
+          exporters: [logging, otlp/tempo]
         metrics:
           receivers: [prometheus]
           processors: [batch]
