--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -54,9 +54,9 @@ spec:
             # Allowing 'severity' attribute and not providing a mapping, since the attribute name is a valid Loki label name.
             severity: ""
             http.status_code: "http_status_code" 
-          # record:
-          #   # Adds 'traceID' as a log label, seen as 'traceid' in Loki.
-          #   traceID: "traceid"
+          record:
+            # Adds 'traceID' as a log label, seen as 'traceid' in Loki.
+            traceID: "traceid"
 
     service:
       pipelines:
